Fix: collapse/expand animation, fix: container sizing

--- a/styles/main.css
+++ b/styles/main.css
@@ -79,21 +79,23 @@ body{
 }
 
 .wrapper {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   background-position: calc(50% - 1140px) center;
   max-width: 1000px;
+  height: 68vh;
   border: 1px solid #4e4b4d;
   border-radius: 8px;
-  padding: 4rem;
+  padding: 1rem;
 }
 
 .compare-container{
-  margin-bottom: 32px;
-  width: 750px;
-  padding: 0rem 1rem;
+  margin-bottom: 4rem;
+  width: 80%;
+  padding: 0 2rem;
 }
 
 .compare-container h2{
@@ -105,6 +107,15 @@ body{
 .compare-container img{
   display: block;
   width: 100%;
+}
+
+.button-wrapper{
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 0.7em;
+  position: absolute;
+  bottom: 2%;
+  z-index: 1;
 }
 
 .hidden{
@@ -138,21 +149,20 @@ body{
 } */
 
 .expand-Img-1{
-  width: 450px;
+  width: 100%;
   -webkit-animation: scaleDownLeft 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s both;
   animation: scaleDownLeft 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s both;
+  opacity: 0;
 }
 
 .expand-Img-2{
-  width: 450px;
+  width: 100%;
   -webkit-animation: scaleDownRight 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s both;
   animation: scaleDownRight 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s both;
+  opacity: 0;
 }
 
-.button-wrapper{
-  display: flex;
-  gap: 1rem;
-}
+
 
 .btn{
   display: block;
@@ -206,16 +216,18 @@ body{
  
 @keyframes scaleDownLeft {
   0% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
     -webkit-transform-origin: 100% 50%;
             transform-origin: 100% 50%;
+            opacity: 0;
   }
   100% {
     -webkit-transform: scale(0.95);
             transform: scale(0.95);
     -webkit-transform-origin: 0% 50%;
             transform-origin: 0% 50%;
+            opacity: 1;
   }
 }
 
@@ -227,16 +239,18 @@ body{
  
 @keyframes scaleDownRight {
   0% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
     -webkit-transform-origin: 0% 50%;
             transform-origin: 0% 50%;
+            opacity: 0;
   }
   100% {
     -webkit-transform: scale(0.95);
             transform: scale(0.95);
     -webkit-transform-origin: 100% 50%;
             transform-origin: 100% 50%;
+            opacity: 1;
   }
 }
 
